registro de nuevos clientes,se agrega el archivo registro-controller.js y en el servicio client-service.js el metodo que se encarga de crear la peticion a la bd, se usa la libreria  uuid.v4 para crear un codigo unico a cada usuario

--- a/screens/registrar_cliente.html
+++ b/screens/registrar_cliente.html
@@ -72,5 +72,7 @@
         </form>
       </section>
     </main>
+    <script src="../library/uuid.min.js"></script>
+    <script type="module" src="../controllers/registro-controller.js"></script>
   </body>
 </html>
